--- a/src/components/FiveDayForecastComp/FiveDayForecast.css
+++ b/src/components/FiveDayForecastComp/FiveDayForecast.css
@@ -1,6 +1,7 @@
 .week-forecast-container {
     border-radius: 24px;
-    padding: 14px;
+    
+    overflow-x: auto;
 }
 
 .forecast-title {
@@ -18,6 +19,6 @@ body.dark-mode .forecast-title {
 
 .forecast-grid {
     display: grid;
-    grid-template-rows: repeat(7, auto);
+    grid-template-columns: repeat(1, 1fr);
     gap: 16px;
 }
