--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,7 @@
     width: 100%;
     top: 0;
     left: 0;
+    z-index: 5;
     border-radius: 0;
     display: flex;
     justify-content: space-between;
