Included state name

--- a/src/components/CurrentForecastComp/CurrentForecast.css
+++ b/src/components/CurrentForecastComp/CurrentForecast.css
@@ -154,6 +154,11 @@ body.dark-mode .temp-container button{
 
 }
 
+.temp-container button:hover{
+    cursor: pointer;
+}
+
+
 .temp-value {
     font-size: 2rem;
     font-weight: bold;
